--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    
     <% flash.each do |name, msg| %>
       <%= content_tag(:div, msg, class: "alert")%>
     <% end %>
-
-    <%= yield %>
+    <div class="container main">
+      <%= yield %>
+    </div>
   </body>
 </html>
