--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,23 +1,25 @@
 <%= form_for @post do |f| %>
-<% if @post.errors.any? %>
-	<div id="errors">
-		<h2><%= pluralize(@post.errors.count, "error") %></h2>
-		<ul>
-			<% @post.errors.full_messages.each do |msg| %>
-				<li><%= msg %></li>
-			<% end %>
-		</ul>
-	</div>
-<% end %>
-<p>
+	<% if @post.errors.any? %>
+		<div id="errors">
+			<h2><%= pluralize(@post.errors.count, "error") %></h2>
+			<ul>
+				<% @post.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+
+<div class="form-group">
 	<%= f.label :title %> <br>
-	<%= f.text_field :title %>
-</p>
-<p>
+	<%= f.text_field :title, class: 'form-control' %>
+</div>
+<div class="form-group">
 	<%= f.label :body %> <br>
-	<%= f.text_area :body %>
-</p>
-<p>
-	<%= f.submit %>
-</p>
+	<%= f.text_area :body, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.submit class: 'btn btn-outline-primary btn-sm' %>
+	<%= link_to 'Назад', :back, class: 'btn btn-outline-dark btn-sm' %>
+</div>
 <% end %>
