--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,17 @@
-<h1 class="title">
-	<%= @post.title %>
-</h1>
+<article class="post">
+	<section class="post-head">
+			<h2><%= @post.title%></h2>
+	<small>
+		<time>Submitted <%= time_ago_in_words(@post.created_at) %> Ago
+			<% if user_signed_in? %>
+				| <%= link_to 'Изменить', edit_post_path(@post) %>
+				| <%= link_to 'Удалить', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+			<% end %> 
+		</time>
+	</small>
+	</section>
 
-<p class="date">
-	Submitted <%= time_ago_in_words(@post.created_at) %> Ago
-	<% if user_signed_in? %>
-	| <%= link_to 'Edit', edit_post_path(@post) %>
-	| <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
-	<% end %>
-</p>
-
-<p class="body">
-	<%= @post.body %>
-</p>
+	<section class="post-body">
+		<%= @post.body %>
+	</section>
+</article>
