--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,2 +1,11 @@
 .main
 	padding-top: 1em
+
+.field_with_errors
+	label	
+		color: #d01612
+	input, textarea
+		border-color: #d01612
+			
+.nav-item
+	list-style-type: none
