--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,18 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    
-    <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert")%>
-    <% end %>
+
     <div class="container main">
+      <div class="row">
+        <div class="col-md-12">
+          <% flash.each do |name, msg| %>
+            <div class="alert alert-<%= name %>">
+              <%= msg %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
       <%= yield %>
     </div>
   </body>
