--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @post do |f| %>
 	<% if @post.errors.any? %>
-		<div id="errors">
-			<h2><%= pluralize(@post.errors.count, "error") %></h2>
+		<div class="alert alert-danger">
+			<h5><%= t('common.errors') %></h5>
 			<ul>
 				<% @post.errors.full_messages.each do |msg| %>
 					<li><%= msg %></li>
@@ -11,15 +11,15 @@
 	<% end %>
 
 <div class="form-group">
-	<%= f.label :title %> <br>
+	<%= f.label :title %>
 	<%= f.text_field :title, class: 'form-control' %>
 </div>
 <div class="form-group">
-	<%= f.label :body %> <br>
+	<%= f.label :body %>
 	<%= f.text_area :body, class: 'form-control' %>
 </div>
 <div class="form-group">
-	<%= f.submit class: 'btn btn-outline-primary btn-sm' %>
-	<%= link_to 'Назад', :back, class: 'btn btn-outline-dark btn-sm' %>
+	<%= f.submit t('.submit', action: @post.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-outline-primary btn-sm' %>
+	<%= link_to t('common.back'), :back, class: 'btn btn-outline-dark btn-sm' %>
 </div>
 <% end %>
