--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 		<section class="post-head">
 			<h2><%= link_to post.title, post %></h2>
 			<small>
-				<time><%= post.created_at.to_date.strftime("%d %B, %Y") %> </time>
+				<time><%= post.created_at.to_date.strftime("%d.%m.%Y") %> </time>
 			</small>
 		</section>
 
