--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,10 @@
 	<section class="post-head">
 			<h2><%= @post.title%></h2>
 	<small>
-		<time>Submitted <%= time_ago_in_words(@post.created_at) %> Ago
+		<time> <%= t('common.submitted') %> <%= time_ago_in_words(@post.created_at) %>  <%= t('common.ago') %>
 			<% if user_signed_in? %>
-				| <%= link_to 'Изменить', edit_post_path(@post) %>
-				| <%= link_to 'Удалить', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+				| <%= link_to t('common.edit'), edit_post_path(@post) %>
+				| <%= link_to t('common.delete'), post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
 			<% end %> 
 		</time>
 	</small>
